--- a/task1/build.gradle
+++ b/task1/build.gradle
@@ -35,6 +35,13 @@ dependencies {
     compile group: 'io.circe', name: 'circe-parser_2.12', version: '0.13.0'
     compile group: 'io.circe', name: 'circe-optics_2.12', version: '0.13.0'
     compile group: 'joda-time', name: 'joda-time', version: '2.10.10'
+
+    compile group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.1.0'
+    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.1.0'
+
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+
     implementation group: 'org.json', name: 'json', version: '20090211'
     testCompile 'org.scala-lang:scala-library:2.12.11'
     testImplementation 'org.scalatest:scalatest_2.12:3.0.0'
